Downgrade Pekko "_3" to Pekko "2.13" because after latest IntelliJ's updates, the IDE does not detect Pekko "_3" classes anymore.
Also add `--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED` JVM option to Jib and IntelliJ's run configurations since the error "cannot obtain access to `jdk.internal.misc.Unsafe`" prevents the services from running.